# personal-asst-a2a

./: .env.example  .gitignore  README.md  app.py  app_with_manager.py  clear_pycache.sh  client.py  credentials.json  docker-compose.yml  dockerfile  export  fix_pylint_issues.py  gcp-oauth.keys.json  gh_tools.py  google-testing.ipynb  pyproject.toml  run_a2a.sh  setup_webhook.sh
.github/workflows/: ci.yml
src/: __init__.py  __main__.py  app.py
src/agents/: __init__.py
src/agents/calendar_agent/: __init__.py  agent.py  agent_card.py  config.yml
src/agents/common/: agent.py  agent_executor.py  agent_manager.py  memory.py  server.py  tool_client.py
src/agents/gmail_agent/: __init__.py  agent.py  agent_card.py  config.yml  tools.py
src/agents/obsidian_agent/: __init__.py  agent.py  agent_card.py  config.yml  tools.py
src/agents/orchestration_agent/: __init__.py  agent.py  agent_card.py  config.yml
src/agents/todoist_agent/: __init__.py  agent.py  agent_card.py  config.yml
src/agents/tools/: github_tools.py
src/core/: __init__.py  cmd.py  llms.py  logger.py
src/core/linters/: __init__.py  base.py  dotenv_linter.py  gitleaks.py  markdownlint.py  pylint.py  pytest.py  ruff.py  semgrep.py
src/mcp_handler/: __init__.py  mcp_gcal.py  mcp_todoist.py
src/mcp_servers/: __init__.py  gmail.py  todoist.py
