[project]
name = "ai-asst-a2a"
version = "0.1.0"
description = ""
authors = [
    {name = "Connor Bell",email = "connor@connorbell.dev"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "a2a-sdk (==0.2.9)",
    "dotenv",
    "pydantic-ai-slim[a2a,google,mcp,logfire]"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
