[project]
name = "ai-asst-a2a"
version = "0.1.0"
description = ""
authors = [
    {name = "Connor Bell",email = "connor@connorbell.dev"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "a2a-sdk (==0.2.9)",
    "dotenv",
    "pydantic-ai-slim[a2a,google,mcp,logfire]"
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pylint>=3.0.0",
    "pytest>=7.0.0"
]

[tool.poetry]
packages = [{include = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
    "import-error",
    "unused-argument",
    "too-few-public-methods",
    "line-too-long",
]
